--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 $bodyColor: #F8F8F8;
 $header: #FFF;
+@import '../../node_modules/swiper/swiper-bundle.css';
 
 @font-face {
   font-family: 'TT-lakes-normal';
@@ -33,6 +34,7 @@ h1 {
   position: relative;
   margin-left: 16px;
   margin-top: 24px;
+  margin-bottom: 24px;
   font-size: 28px;
   line-height: 40px;
   letter-spacing: -0.6px;
@@ -110,6 +112,16 @@ h1::before {
   background-position: 50% 50%;
   background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.25807 13.4583L8.66685 13.0494L6.94998 11.3322L6.54121 11.7411L6.33682 11.5367C6.0098 11.1687 5.68278 10.9643 5.35575 11.0052C5.11049 11.0052 4.9061 11.1687 4.74259 11.414C4.49732 11.8229 4.61996 12.2726 4.66083 12.5588C4.66083 12.6406 4.70171 12.6815 4.70171 12.7632C4.70171 12.8859 4.70171 13.0494 4.41557 13.0903C4.00679 13.213 3.47538 13.3356 2.94397 13.6218C2.20817 14.0307 1.71764 14.3987 1.4315 14.7666C-0.0809772 16.7291 0.000778159 18.4055 0.000778159 18.4872C0.000778159 18.6099 0.0416558 18.6917 0.123411 18.7325L1.22711 19.8773C1.30886 19.9591 1.39062 20 1.47237 20C1.47237 20 1.51325 20 1.59501 20C2.00378 20 3.47538 19.9182 5.19224 18.569C5.56014 18.2828 5.92804 17.7922 6.33682 17.0562C6.62296 16.5656 6.78647 16.0341 6.86823 15.5844C6.94998 15.2982 7.07262 15.2982 7.19525 15.2982C7.23613 15.2982 7.31788 15.339 7.39964 15.339C7.56315 15.3799 7.72666 15.4208 7.93105 15.4208C8.13544 15.4208 8.33983 15.3799 8.54421 15.2573C8.78948 15.0937 8.95299 14.8893 8.99387 14.644C9.03475 14.3169 8.87123 13.9898 8.50334 13.7036L8.25807 13.4583Z' fill='white'/%3E%3Cpath d='M16.884 4.87841L18.0188 4.32603C18.0609 4.28354 18.1449 4.24105 18.1869 4.19856L19.9101 1.86157C20.0362 1.69161 20.0362 1.43667 19.8681 1.3092L18.6913 0.119458C18.5652 -0.00801422 18.313 -0.0505049 18.1449 0.076967L15.8333 1.81908C15.7913 1.86157 15.7493 1.90406 15.7072 1.98905L15.1609 3.13629L11 7.21539L12.7652 9L16.884 4.87841Z' fill='white'/%3E%3Cpath d='M17.8527 13.0448C16.8636 12.0036 15.4393 11.6288 14.0941 12.0036L7.64527 5.17331C7.72439 4.79848 7.76396 4.46529 7.76396 4.09046C7.76396 3.04926 7.36832 2.00806 6.61661 1.21675C5.58796 0.0922529 4.04498 -0.282579 2.6207 0.217197C2.54157 0.258845 2.42288 0.383789 2.38331 0.550381C2.38331 0.675325 2.42288 0.800269 2.50201 0.925213L4.44062 2.96597C4.87582 3.42409 4.87582 4.21541 4.44062 4.67353C4.00542 5.13166 3.25371 5.13166 2.81851 4.67353L0.8799 2.63278C0.76121 2.54949 0.642519 2.50784 0.484265 2.54949C0.365574 2.54949 0.246884 2.67443 0.20732 2.79937C-0.267442 4.25705 0.0886295 5.88133 1.11728 6.96417C1.82943 7.75549 2.85808 8.17197 3.88673 8.17197C4.20324 8.17197 4.55931 8.13032 4.87582 8.04702L11.3642 14.8773C11.0082 16.2933 11.4038 17.7927 12.3533 18.8339C13.105 19.6252 14.0546 20 15.0832 20C15.5184 20 15.914 19.9167 16.3492 19.7918C16.4679 19.7501 16.5866 19.6252 16.6262 19.5002C16.6658 19.3753 16.6262 19.2087 16.5075 19.1254L14.5689 17.0846C14.3711 16.8764 14.2128 16.5432 14.2128 16.21C14.2128 15.8768 14.3315 15.5853 14.5689 15.3354C14.8063 15.0855 15.0832 14.9606 15.3997 14.9606C15.7162 14.9606 15.9932 15.0855 16.2306 15.3354L18.1692 17.3762C18.2879 17.4595 18.4065 17.5011 18.5252 17.5011C18.6439 17.4595 18.7626 17.3762 18.8022 17.2512C18.9209 16.8348 19 16.3766 19 15.9185C19 14.8356 18.6044 13.7944 17.8527 13.0448Z' fill='white'/%3E%3C/svg%3E");
   position: relative;
+
+  &::after {
+    position: absolute;
+    content: '';
+    border: 1px solid #EAEAEA;
+    border-radius: 1px;
+    height: 32px;
+    top: 4px;
+    left: -16px;
+  }
  }
 
  .header__button--profile {
@@ -124,14 +136,167 @@ h1::before {
 	background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M18 0H2C0.9 0 0.01 0.9 0.01 2L0 20L4 15H18C19.1 15 20 14.1 20 13V2C20 0.9 19.1 0 18 0ZM11 11H5C4.45 11 4 10.55 4 10C4 9.45 4.45 9 5 9H11C11.55 9 12 9.45 12 10C12 10.55 11.55 11 11 11ZM15 6H5C4.45 6 4 5.55 4 5C4 4.45 4.45 4 5 4H15C15.55 4 16 4.45 16 5C16 5.55 15.55 6 15 6Z' fill='white'/%3E%3C/svg%3E");
 }
 
-.header__button--application::after {
-  position: absolute;
-  content: '';
-  border: 1px solid #EAEAEA;
-  border-radius: 1px;
-  height: 32px;
-  top: 4px;
-  left: -16px;
+.navigation__menu {
+  display: flex;
+  white-space: nowrap;
+  overflow: auto;
+  list-style: none; 
+  padding-inline-start: 16px;
+  margin-block: 0;
+  margin-bottom: 24px;
 }
 
+.navigation__name {
+  font-family: 'TT-lakes-medium';
+  text-decoration: none;
+  color: #7E7E82;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+}
+
+.navigation__item {
+  padding: 8px 16px;
+}
+
+.navigation__item--active {
+  border: 2px solid #B8FFEC;
+  background-color: #FFFFFF;
+  border-radius: 6px;
+}
+
+.company-presentation__text {
+  font-family: 'TT-lakes-normal';
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.2px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin: 0;
+}
+
+.read-more {
+  font-family: 'TT-lakes-medium';
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  margin-left: 24px;
+  margin-top: 10px;
+  margin-bottom: 16px;
+  position: relative;
+  border:none;
+  background:none;
+  cursor: pointer;
+  text-align: start;
+  max-width: 150px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    height: 5px;
+    width: 5px;
+    border-left: 3px solid #B8FFEC;
+    border-top: 3px solid #B8FFEC;
+    rotate: 225deg;
+    top: 5px; 
+    left: -10px;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    height: 5px;
+    width: 5px;
+    border-left: 3px solid #B8FFEC;
+    border-top: 3px solid #B8FFEC;
+    rotate: 225deg;
+    top: 11px; 
+    left: -10px;
+  }
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+.company-presentation__image {
+  margin-bottom: 24px;
+}
+
+.subtitles {
+  padding: 16px;
+  font-family: 'TT-lakes-normal';
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  color: #7E7E82;
+  font-weight: 400;
+  margin: 0 0 16px 0;
+  background-color: #FFFFFF;
+  border-top: 1px solid #B8FFEC;
+}
+
+.button-styling {
+  width: 240px;
+  height: 72px;
+  border: 1px solid #EAEAEA;
+  border-radius: 6px;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+  line-height: 72px;
+  padding-left: 16px;
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: '';
+    height: 40px;
+    width: 40px;
+    border: 2px solid #FF3E79;
+    border-radius: 50%;
+    top: 16px;
+    right: 15px;
+  }
+
+  &::before {
+    position: absolute;
+    content: '';
+    width: 8px;
+    height: 8px;
+    rotate: -45deg;
+    top: 33px;
+    right: 34px;
+    border-bottom: 2px solid #FF3E79;
+    border-right: 2px solid #FF3E79;
+    border-radius: 1px;
+  }
+}
+
+.button-styling img {
+  vertical-align: middle;
+}
+
+.swiper {
+  overflow: visible;
+}
+
+.image-slide__wrapper {
+  padding-left: 16px;
+  position: relative;
+  margin-bottom: 52px;
+}
+
+.swiper .swiper-pagination {
+  position: absolute;
+  bottom: -30px;
+}
+
+.image-slider .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #B5B6BC;
+  --swiper-pagination-bullet-horizontal-gap: 6px;
+  
+}
 
