--- a/style.css
+++ b/style.css
@@ -739,8 +739,16 @@ h1 {
 .repair-technique__items-wrapper--hidden,
 .company-presentation__text--second,
 .company-presentation__text--third,
-.service-prices__table-wrapper {
+.service-prices__table-wrapper,
+.menu__button--visibility {
   display: none; }
+
+.menu {
+  width: 320px;
+  background-color: #FFFFFF;
+  min-height: 676px;
+  height: 2000px;
+  float: left; }
 
 .header {
   display: flex;
@@ -1098,6 +1106,127 @@ h1 {
   padding-top: 16px;
   text-align: center; }
 
+.menu-visibility {
+  display: block;
+  position: relative;
+  z-index: 10;
+  top: 0;
+  min-height: 676px;
+  height: 100vw;
+  width: 100vw; }
+  @media (min-width: 361px) {
+    .menu-visibility {
+      width: 320px;
+      height: 1024; }
+      .menu-visibility::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #1B1C21;
+        width: 100%;
+        height: 100%;
+        filter: blur(10px); } }
+
+.menu__button--search {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.5006 11.0006H11.7106L11.4306 10.7306C12.6306 9.33063 13.2506 7.42063 12.9106 5.39063C12.4406 2.61063 10.1206 0.390626 7.32063 0.0506256C3.09063 -0.469374 -0.469374 3.09063 0.0506256 7.32063C0.390626 10.1206 2.61063 12.4406 5.39063 12.9106C7.42063 13.2506 9.33063 12.6306 10.7306 11.4306L11.0006 11.7106V12.5006L15.2606 16.7506C15.6706 17.1606 16.3306 17.1606 16.7406 16.7506L16.7506 16.7406C17.1606 16.3306 17.1606 15.6706 16.7506 15.2606L12.5006 11.0006ZM6.50063 11.0006C4.01063 11.0006 2.00063 8.99063 2.00063 6.50063C2.00063 4.01063 4.01063 2.00063 6.50063 2.00063C8.99063 2.00063 11.0006 4.01063 11.0006 6.50063C11.0006 8.99063 8.99063 11.0006 6.50063 11.0006Z' fill='white'/%3E%3C/svg%3E"); }
+
+.menu__button--out {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.79348 1.25712C2.40295 0.866593 1.76979 0.866592 1.37927 1.25712L1.25712 1.37927C0.866592 1.76979 0.866593 2.40296 1.25712 2.79348L7.46364 9L1.25712 15.2065C0.866593 15.597 0.866592 16.2302 1.25712 16.6207L1.37927 16.7429C1.76979 17.1334 2.40295 17.1334 2.79348 16.7429L9 10.5364L15.2065 16.7429C15.597 17.1334 16.2302 17.1334 16.6207 16.7429L16.7429 16.6207C17.1334 16.2302 17.1334 15.597 16.7429 15.2065L10.5364 9L16.7429 2.79348C17.1334 2.40296 17.1334 1.76979 16.7429 1.37927L16.6207 1.25712C16.2302 0.866592 15.597 0.866593 15.2065 1.25712L9 7.46364L2.79348 1.25712Z' fill='white'/%3E%3C/svg%3E%0A");
+  margin-bottom: 8px;
+  margin-right: 16px; }
+
+.logo {
+  cursor: pointer; }
+
+.menu__header {
+  display: flex;
+  align-items: center;
+  padding: 18px 16px 0 16px;
+  justify-content: space-between; }
+
+.menu__navigation {
+  width: 276px;
+  margin-top: 37px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'TT-lakes-medium';
+  padding-inline-start: 0; }
+
+.navigation-list {
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  list-style: none;
+  padding-inline-start: 24px;
+  margin-block-start: 0; }
+
+.navigation-list__button--active {
+  color: #7E7E82;
+  position: relative; }
+  .navigation-list__button--active::after {
+    position: absolute;
+    content: '';
+    left: -30px;
+    top: -8px;
+    height: 32px;
+    border-left: 8px solid #41F6D7;
+    border-radius: 10px; }
+
+.navigation-list__button {
+  min-width: 90%;
+  text-align: left;
+  background-color: #FFFFFF;
+  border: none;
+  margin-bottom: 24px;
+  cursor: pointer;
+  font-family: 'TT-lakes-medium'; }
+
+.aside-footer {
+  padding: 4px; }
+
+.aside-footer__form {
+  margin-left: 20px; }
+
+.aside-footer__link {
+  display: block;
+  text-decoration: none;
+  color: #1B1C21;
+  margin-left: 16px; }
+
+.aside-footer__link--mail {
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  font-family: 'TT-lakes-medium';
+  margin-top: 16px;
+  margin-bottom: 12px;
+  margin-left: 16px; }
+
+.aside-footer__link--tel {
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.6px;
+  font-family: 'TT-lakes-bold';
+  margin-bottom: 40px;
+  margin-left: 16px; }
+
+.lang__switch {
+  opacity: 0;
+  position: absolute;
+  margin-left: 16px; }
+
+.lang__switch + span {
+  cursor: pointer; }
+
+.lang__switch:checked + span {
+  color: #7E7E82; }
+
 @media (min-width: 767px) {
   .header__button--hidden {
     display: inline-block; }
@@ -1109,7 +1238,7 @@ h1 {
     margin-right: 24px;
     margin-bottom: 16px; }
   .subtitles {
-    margin-bottom: 24px;
+    margin-bottom: 63px;
     padding-left: 24px; }
   .repair-brand__items-wrapper,
   .repair-technique__items-wrapper {
@@ -1181,23 +1310,17 @@ h1 {
   .service-prices__table-wrapper {
     display: block;
     margin: 24px;
-    border-radius: 20px;
-    border: 1px solid black;
-    overflow: hidden;
+    border-radius: 6px;
+    border: 1px solid  white;
     font-family: 'TT-lakes-medium';
     font-style: 14px;
     line-height: 18px; }
   .service-prices__table {
     border-collapse: collapse;
-    width: 100%; }
+    width: 100%;
+    background-color: #fff; }
   .service-prices__table td {
     padding: 23px 16px 23px 16px; }
-  .service-prices__head {
-    color: #7E7E82; }
-  .service-prices__body {
-    border-radius: 20px;
-    border: none;
-    background-color: #FFFFFF; }
   .service-prices__description {
     width: 421px; }
   .take-offer {
@@ -1234,105 +1357,68 @@ h1 {
   .order {
     position: relative;
     right: 0;
-    top: 0; } }
+    top: 0; }
+  .service-prices__order-wrapper {
+    text-align: right; }
+  .service-prices__order {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'TT-lakes-bold', sans-serif;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 16px;
+    letter-spacing: -0.15px;
+    font-size: 12px;
+    background-color: #FF3E79;
+    border-radius: 16px;
+    width: 119px;
+    height: 32px;
+    padding: 4px 40px 4px 12px;
+    vertical-align: middle;
+    position: relative;
+    border: none; }
+    .service-prices__order::after {
+      position: absolute;
+      content: '';
+      width: 6px;
+      height: 6px;
+      rotate: -45deg;
+      top: 11px;
+      right: 15px;
+      border-bottom: 3px solid #FFFFFF;
+      border-right: 3px solid #FFFFFF;
+      border-radius: 1px; }
+  .servecices-prices__service {
+    position: relative; }
+    .servecices-prices__service::after {
+      content: 'Ремонтные услуги';
+      position: absolute;
+      top: -32px;
+      left: 14px;
+      color: #7E7E82; }
+  .servecices-prices__price {
+    position: relative; }
+    .servecices-prices__price::after {
+      content: 'Цена';
+      position: absolute;
+      top: -32px;
+      left: 14px;
+      color: #7E7E82; }
+  .servecices-prices__time {
+    position: relative; }
+    .servecices-prices__time::after {
+      content: 'Срок';
+      position: absolute;
+      top: -32px;
+      left: 14px;
+      color: #7E7E82; } }
 
 @media (min-width: 1439px) {
   .header,
   .company-presentation__text--second {
     display: none; }
   .menu {
-    width: 320px;
-    float: left;
-    display: block;
-    background-color: #FFFFFF;
-    min-height: 1925px; }
-  .menu__button--search {
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.5006 11.0006H11.7106L11.4306 10.7306C12.6306 9.33063 13.2506 7.42063 12.9106 5.39063C12.4406 2.61063 10.1206 0.390626 7.32063 0.0506256C3.09063 -0.469374 -0.469374 3.09063 0.0506256 7.32063C0.390626 10.1206 2.61063 12.4406 5.39063 12.9106C7.42063 13.2506 9.33063 12.6306 10.7306 11.4306L11.0006 11.7106V12.5006L15.2606 16.7506C15.6706 17.1606 16.3306 17.1606 16.7406 16.7506L16.7506 16.7406C17.1606 16.3306 17.1606 15.6706 16.7506 15.2606L12.5006 11.0006ZM6.50063 11.0006C4.01063 11.0006 2.00063 8.99063 2.00063 6.50063C2.00063 4.01063 4.01063 2.00063 6.50063 2.00063C8.99063 2.00063 11.0006 4.01063 11.0006 6.50063C11.0006 8.99063 8.99063 11.0006 6.50063 11.0006Z' fill='white'/%3E%3C/svg%3E"); }
-  .logo {
-    margin-right: 78px;
-    cursor: auto; }
-  .menu__header {
-    display: flex;
-    align-items: center;
-    padding: 30px 30px 0 22px;
-    justify-content: space-between; }
-  .menu__navigation {
-    width: 276px;
-    height: 720px;
-    margin-top: 37px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'TT-lakes-medium';
-    padding-inline-start: 0; }
-  .navigation-list {
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    list-style: none;
-    padding-inline-start: 24px;
-    margin-block-start: 0; }
-  .navigation-list__button--active {
-    color: #7E7E82;
-    position: relative; }
-    .navigation-list__button--active::after {
-      position: absolute;
-      content: '';
-      left: -30px;
-      top: -8px;
-      height: 32px;
-      border-left: 8px solid #41F6D7;
-      border-radius: 10px; }
-  .navigation-list__button {
-    min-width: 90%;
-    text-align: left;
-    background-color: #FFFFFF;
-    border: none;
-    margin-bottom: 32px;
-    cursor: pointer;
-    font-family: 'TT-lakes-medium'; }
-  .navigation-list__button {
-    min-width: 90%;
-    text-align: left;
-    background-color: #FFFFFF;
-    border: none;
-    margin-bottom: 28px;
-    cursor: pointer;
-    font-family: 'TT-lakes-medium'; }
-  .aside-footer {
-    padding: 4px; }
-  .aside-footer__form {
-    margin-left: 20px; }
-  .aside-footer__link {
-    display: block;
-    text-decoration: none;
-    color: #1B1C21;
-    margin-left: 16px; }
-  .aside-footer__link--mail {
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    font-family: 'TT-lakes-medium';
-    margin-top: 16px;
-    margin-bottom: 12px;
-    margin-left: 16px; }
-  .aside-footer__link--tel {
-    font-size: 24px;
-    line-height: 32px;
-    letter-spacing: -0.6px;
-    font-family: 'TT-lakes-bold';
-    margin-bottom: 40px;
-    margin-left: 16px; }
-  .lang__switch {
-    opacity: 0;
-    position: absolute;
-    margin-left: 16px; }
-  .lang__switch + span {
-    cursor: pointer; }
-  .lang__switch:checked + span {
-    color: #7E7E82; }
+    display: block; }
   .header-container {
     display: flex;
     justify-content: space-between;
