--- a/style.css
+++ b/style.css
@@ -740,15 +740,166 @@ h1 {
 .company-presentation__text--second,
 .company-presentation__text--third,
 .service-prices__table-wrapper,
-.menu__button--visibility {
+.menu__button--visibility,
+.company-presentation__text--hidden,
+.button-hidden,
+.modal-call__visibility,
+.modal-feedback__visibility {
+  display: none; }
+
+.modal-call,
+.modal-feedback {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.95); }
+
+.modal-call__content,
+.modal-feedback__content {
+  z-index: 11;
+  position: absolute;
+  background-color: #FFF;
+  width: 100vw;
+  max-width: 440px;
+  height: 100%;
+  top: 0;
+  right: 0;
+  box-shadow: 16px 0px 52px 0px rgba(14, 24, 80, 0.2), -2px 0px 4px 0px rgba(69, 79, 126, 0.02); }
+
+.modal-call__title,
+.modal-feedback__title {
+  color: #1B1C21;
+  font-size: 24px;
+  font-family: 'TT-lakes-bold', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: -0.6px;
+  margin: 0 16px 24px 16px;
+  position: relative; }
+  .modal-call__title::after,
+  .modal-feedback__title::after {
+    position: fixed;
+    content: '';
+    border: 3px solid #41F6D7;
+    height: 40px;
+    border-radius: 4px;
+    left: -2px;
+    top: 108px; }
+  @media (min-width: 440px) {
+    .modal-call__title,
+    .modal-feedback__title {
+      margin: 40px 0 0 32px; } }
+
+.modal-call .modal-call__out,
+.modal-feedback .modal-feedback__out {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.79348 1.25712C2.40295 0.866593 1.76979 0.866592 1.37927 1.25712L1.25712 1.37927C0.866592 1.76979 0.866593 2.40296 1.25712 2.79348L7.46364 9L1.25712 15.2065C0.866593 15.597 0.866592 16.2302 1.25712 16.6207L1.37927 16.7429C1.76979 17.1334 2.40295 17.1334 2.79348 16.7429L9 10.5364L15.2065 16.7429C15.597 17.1334 16.2302 17.1334 16.6207 16.7429L16.7429 16.6207C17.1334 16.2302 17.1334 15.597 16.7429 15.2065L10.5364 9L16.7429 2.79348C17.1334 2.40296 17.1334 1.76979 16.7429 1.37927L16.6207 1.25712C16.2302 0.866592 15.597 0.866593 15.2065 1.25712L9 7.46364L2.79348 1.25712Z' fill='white'/%3E%3C/svg%3E%0A");
+  margin: 24px 0 40px 16px; }
+  @media (min-width: 510px) {
+    .modal-call .modal-call__out,
+    .modal-feedback .modal-feedback__out {
+      position: absolute;
+      top: 8px;
+      left: -86px; } }
+
+.modal-call__input,
+.modal-feedback__input {
+  border-radius: 8px;
+  border: 1px solid #EAEAEA;
+  background: #FFF;
+  width: 85%;
+  margin: 16px 24px 0 16px;
+  color: #B5B6BC;
+  font-size: 16px;
+  font-family: 'TT-lakes-normal', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  padding: 12px 0 12px 16px; }
+  @media (min-width: 440px) {
+    .modal-call__input,
+    .modal-feedback__input {
+      margin-left: 32px;
+      margin-right: 32px;
+      width: 82%; } }
+
+.modal-call__text,
+.modal-feedback__text {
+  color: #7E7E82;
+  font-size: 14px;
+  font-family: 'TT-lakes-normal', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  margin: 16px; }
+  @media (min-width: 440px) {
+    .modal-call__text,
+    .modal-feedback__text {
+      margin: 16px 32px 32px 32px; } }
+
+.modal-call__red-text,
+.modal-feedback__red-text {
+  color: #FF3E79; }
+
+.modal-call__submit,
+.modal-feedback__submit {
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'TT-lakes-bold', sans-serif;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 16px;
+  letter-spacing: -0.15px;
+  line-height: 32px;
+  font-size: 12px;
+  background-color: #FF3E79;
+  border-radius: 16px;
+  padding-left: 12px;
+  width: 136px;
+  height: 32px;
+  position: relative;
+  padding-left: 20px;
+  box-sizing: border-box;
+  float: right;
+  margin-right: 25px; }
+  .modal-call__submit::after,
+  .modal-feedback__submit::after {
+    position: absolute;
+    content: '';
+    width: 6px;
+    height: 6px;
+    rotate: -45deg;
+    top: 11px;
+    right: 15px;
+    border-bottom: 3px solid #FFFFFF;
+    border-right: 3px solid #FFFFFF;
+    border-radius: 1px; }
+  @media (min-width: 440px) {
+    .modal-call__submit,
+    .modal-feedback__submit {
+      margin-right: 32px; } }
+
+.link-bar.button-hidden {
   display: none; }
 
 .menu {
   width: 320px;
   background-color: #FFFFFF;
   min-height: 676px;
-  height: 2000px;
   float: left; }
+  @media (min-width: 768px) {
+    .menu {
+      height: 1024px; } }
+  @media (min-width: 1366px) {
+    .menu {
+      height: 2050px; } }
 
 .header {
   display: flex;
@@ -768,6 +919,18 @@ h1 {
   background-color: #FF3E79;
   border-radius: 50%;
   cursor: pointer; }
+
+.menu__button:hover,
+.header__button:hover,
+.navigation__item:hover,
+.header-container__button:hover,
+.navigation-list__button:hover,
+.aside-footer__link:hover,
+.read-more:hover,
+.link-bar:hover,
+.service-prices__order:hover,
+.take-offer:hover {
+  opacity: 0.5; }
 
 .header__logo {
   display: inline-block;
@@ -864,6 +1027,41 @@ h1 {
 .company-presentation__image {
   width: 100%;
   height: auto; }
+
+.close {
+  font-family: 'TT-lakes-medium', sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  margin-left: 24px;
+  margin-top: 10px;
+  margin-bottom: 16px;
+  position: relative;
+  border: none;
+  background: none;
+  cursor: pointer;
+  text-align: start;
+  max-width: 150px; }
+  .close::after {
+    content: '';
+    position: absolute;
+    height: 5px;
+    width: 5px;
+    border-left: 3px solid #B8FFEC;
+    border-top: 3px solid #B8FFEC;
+    rotate: 45deg;
+    top: 8px;
+    left: -10px; }
+  .close::before {
+    content: '';
+    position: absolute;
+    height: 5px;
+    width: 5px;
+    border-left: 3px solid #B8FFEC;
+    border-top: 3px solid #B8FFEC;
+    rotate: 45deg;
+    top: 14px;
+    left: -10px; }
 
 .read-more {
   font-family: 'TT-lakes-medium', sans-serif;
@@ -1108,25 +1306,14 @@ h1 {
 
 .menu-visibility {
   display: block;
-  position: relative;
-  z-index: 10;
+  position: absolute;
+  z-index: 2;
   top: 0;
-  min-height: 676px;
-  height: 100vw;
-  width: 100vw; }
-  @media (min-width: 361px) {
-    .menu-visibility {
-      width: 320px;
-      height: 1024; }
-      .menu-visibility::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: #1B1C21;
-        width: 100%;
-        height: 100%;
-        filter: blur(10px); } }
+  left: 0;
+  height: 100%; }
+
+.modal-blur {
+  filter: blur(5px); }
 
 .menu__button--search {
   background-repeat: no-repeat;
@@ -1139,6 +1326,9 @@ h1 {
   background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.79348 1.25712C2.40295 0.866593 1.76979 0.866592 1.37927 1.25712L1.25712 1.37927C0.866592 1.76979 0.866593 2.40296 1.25712 2.79348L7.46364 9L1.25712 15.2065C0.866593 15.597 0.866592 16.2302 1.25712 16.6207L1.37927 16.7429C1.76979 17.1334 2.40295 17.1334 2.79348 16.7429L9 10.5364L15.2065 16.7429C15.597 17.1334 16.2302 17.1334 16.6207 16.7429L16.7429 16.6207C17.1334 16.2302 17.1334 15.597 16.7429 15.2065L10.5364 9L16.7429 2.79348C17.1334 2.40296 17.1334 1.76979 16.7429 1.37927L16.6207 1.25712C16.2302 0.866592 15.597 0.866593 15.2065 1.25712L9 7.46364L2.79348 1.25712Z' fill='white'/%3E%3C/svg%3E%0A");
   margin-bottom: 8px;
   margin-right: 16px; }
+  @media (min-width: 1366px) {
+    .menu__button--out {
+      display: none; } }
 
 .logo {
   cursor: pointer; }
@@ -1249,9 +1439,11 @@ h1 {
   .link-bar__style--second {
     width: 224px; }
   .link-hidden,
-  .link-drop-down {
+  .link-drop-down,
+  .bar-drop-down {
     display: none; }
-  .show-all {
+  .show-all,
+  .close-all {
     margin-bottom: 32px; }
   h1 {
     margin-bottom: 32px; }
@@ -1303,6 +1495,31 @@ h1 {
       height: 5px;
       rotate: 45deg;
       top: 10px;
+      left: 25px;
+      border-right: 2px solid #41F6D7;
+      border-bottom: 2px solid #41F6D7;
+      border-radius: 1px; }
+  .close-all__styling {
+    position: relative;
+    padding-left: 44px; }
+    .close-all__styling::after {
+      position: absolute;
+      content: '';
+      width: 5px;
+      height: 5px;
+      rotate: 225deg;
+      top: 8px;
+      left: 25px;
+      border-right: 2px solid #41F6D7;
+      border-bottom: 2px solid #41F6D7;
+      border-radius: 1px; }
+    .close-all__styling::before {
+      position: absolute;
+      content: '';
+      width: 5px;
+      height: 5px;
+      rotate: 225deg;
+      top: 14px;
       left: 25px;
       border-right: 2px solid #41F6D7;
       border-bottom: 2px solid #41F6D7;
@@ -1413,7 +1630,7 @@ h1 {
       left: 14px;
       color: #7E7E82; } }
 
-@media (min-width: 1439px) {
+@media (min-width: 1366px) {
   .header,
   .company-presentation__text--second {
     display: none; }
@@ -1486,11 +1703,14 @@ h1 {
     padding-left: 32px; }
   .link-hidden {
     display: block; }
-  .show-all__styling {
+  .show-all__styling,
+  .close-all__styling {
     padding-left: 63px; }
-    .show-all__styling::before {
+    .show-all__styling::before,
+    .close-all__styling::before {
       left: 40px; }
-    .show-all__styling::after {
+    .show-all__styling::after,
+    .close-all__styling::after {
       left: 40px; }
   .link-bar__style--second,
   .link-bar__style--first {
