--- a/style.css
+++ b/style.css
@@ -829,6 +829,9 @@ h1 {
       margin-right: 32px;
       width: 82%; } }
 
+.modal-feedback__input--message {
+  padding-bottom: 82px; }
+
 .modal-call__text,
 .modal-feedback__text {
   color: #7E7E82;
