--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -153,6 +153,11 @@ h1 {
   }
 }
 
+.modal-feedback__input--message {
+  padding-bottom: 82px;
+  
+}
+
 .modal-call__text,
 .modal-feedback__text {
   color: #7E7E82;
