--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -199,7 +199,10 @@ h1 {
   box-sizing: border-box;
   float: right;
   margin-right: 25px;
-
+  
+  &:hover {
+    opacity: 0.5;
+  }
 
   &::after {
     position: absolute;
