--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,11 +109,17 @@ h1 {
     height: 40px;
     border-radius: 4px;
     left: -2px;
-    top: 108px;
+    top: 100px;
   }
 
   @media (min-width:440px) {
     margin: 40px 0 0 32px;
+
+    &::after {
+      position: absolute;
+      top: -6px;
+      left: -35px;
+    }
   }
 }
 
