--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,6 +65,15 @@ h1 {
   display: none;
 }
 
+.link-bar.repair-brand__show-all,
+.link-bar.repair-technique__show-all {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: block;
+  }
+}
+
 .modal-call,
 .modal-feedback {
   position: fixed;
